--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
                 <img src="assets/img/logo.svg" alt="Logo">
             </div>
             <div class="nav-links">
-                <a href="index.html">Projects</a>
-                <a href="about.html">About</a>
+                <a href="index.html" target="_blank">Projects</a>
+                <a href="about.html" target="_blank">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
                 <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
             </div>
@@ -50,7 +50,7 @@
                 <div class="job fade-in">
                     <div class="job-header">
                         <h3>UIUX Designer at UNIS LLC</h3>
-                        <a href="#" class="visit-link">Visit Link <span>↗</span></a>
+                        <a href="https://www.unisco.com/" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
                     </div>
                     <p class="job-date">2023 - 2024</p>
                     <ul>
@@ -64,7 +64,7 @@
                 <div class="job fade-in">
                     <div class="job-header">
                         <h3>Product Designer at ContentFi</h3>
-                        <a href="#" class="visit-link">Visit Link <span>↗</span></a>
+                        <!-- <a href="#" class="visit-link">Visit Link <span>↗</span></a> -->
                     </div>
                     <p class="job-date">2022</p>
                     <ul>
@@ -77,7 +77,7 @@
                 <div class="job fade-in">
                     <div class="job-header">
                         <h3>Web Designerat Perkies LLC</h3>
-                        <a href="#" class="visit-link">Visit Link <span>↗</span></a>
+                        <a href="https://perkies.com/" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
                     </div>
                     <p class="job-date">2021</p>
                     <ul>
@@ -101,11 +101,11 @@
         <div class="footer-content">
             <p>Designed by Meng Lan 2024</p>
             <div class="footer-links">
-                <a href="index.html">Projects</a>
-                <a href="about.html">About</a>
+                <a href="index.html" target="_blank">Projects</a>
+                <a href="about.html" target="_blank">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
-                <a href="https://www.linkedin.com/in/mlan14/">LinkedIn</a>
-                <a href="https://dribbble.com/mlan14">Dribbble</a>
+                <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
+                <a href="https://dribbble.com/mlan14" target="_blank">Dribbble</a>
             </div>
         </div>
     </footer>
