--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/img/logo.svg" alt="Logo">
+                <a href="index.html">
+                    <img src="assets/img/logo.svg" alt="Logo">
+                </a>
             </div>
+            <button class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">Projects</a>
                 <a href="about.html">About</a>
@@ -49,6 +56,18 @@
                     <h3>Vendor Portal - Invoice Generation</h3>
                     <p>Responsive Web Design</p>
                 </div>
+                <div class="project-card fade-in">
+                    <img src="assets/img/cover-mystorybook.png" alt="My Story Book">
+                    <h3>My Story Book</h3>
+                    <p>App Design</p>
+                </div>
+                <div class="project-card fade-in">
+                    <a href="pickymon.html">
+                        <img src="assets/img/cover-pickymon.png" alt="Pickymon">
+                        <h3>Pickymon</h3>
+                        <p>Graphic Design, Illustration</p>
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -64,13 +83,35 @@
         <div class="footer-content">
             <p>Designed by Meng Lan 2024</p>
             <div class="footer-links">
-                <a href="index.html">Projects</a>
-                <a href="about.html">About</a>
+                <a href="index.html" target="_blank">Projects</a>
+                <a href="about.html" target="_blank">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
-                <a href="https://www.linkedin.com/in/mlan14/">LinkedIn</a>
-                <a href="https://dribbble.com/mlan14">Dribbble</a>
+                <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
+                <a href="https://dribbble.com/mlan14" target="_blank">Dribbble</a>
             </div>
         </div>
     </footer>
+
+    <script>
+        // Hamburger menu functionality
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+        const body = document.body;
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+            body.style.overflow = navLinks.classList.contains('active') ? 'hidden' : '';
+        });
+
+        // Close menu when clicking a link
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+                body.style.overflow = '';
+            });
+        });
+    </script>
 </body>
 </html>
