--- a/about.html
+++ b/about.html
@@ -89,6 +89,77 @@
             </div>
         </section>
 
+        <section class="awards">
+            <div class="awards-list">
+                <h2 class="fade-in">Awards</h2>
+                <div class="award-items">
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>Creativepool Annual 2024</h3>
+                            <a href="https://creativepool.com/meng-lan/projects/way-to-drive-navigating-foreign-roads-safely" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Shortlist</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>Indigo Awards 2024</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Silver</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>NYX Awards 2024</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Gold</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>London Design Awards 2023</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Gold</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>GDUSA Graphic Design Awards 2023</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Poster Awards</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>Graphis Poster design 2023</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Silver</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>VEGA Digital Awards 2023</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Silver</p>
+                    </div>
+
+                    <div class="award-item fade-in">
+                        <div class="award-header">
+                            <h3>Muse Creative Awards 2023</h3>
+                            <a href="#" class="visit-link" target="_blank">Visit Link <span>↗</span></a>
+                        </div>
+                        <p class="award-category">Silver</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="contact">
             <div class="contact-content fade-in">
                 <h2>Let's start creating together</h2>
