--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         <h3>UIUX Designer at UNIS LLC</h3>
                         <p>2023 - 2024</p>
                     </div>
-                    <a href="#" class="visit-link">Visit Link ↗</a>
+                    <a href="https://www.unisco.com/" class="visit-link">Visit Link ↗</a>
                 </div>
                 <div class="experience-details">
                     <p>Designed and delivered innovative user interface concepts, wireframes, and prototypes for web and mobile applications, ensuring alignment with user needs and business goals</p>
@@ -62,7 +62,7 @@
                         <h3>Product Designer at ContentFi</h3>
                         <p>2022</p>
                     </div>
-                    <a href="#" class="visit-link">Visit Link ↗</a>
+                    <!-- <a href="#" class="visit-link">Visit Link ↗</a> -->
                 </div>
                 <div class="experience-details">
                     <p>Led the end-to-end product design process for cbc.tools, transforming the product from MVP to a fully functional beta version with a user-centered approach</p>
@@ -76,7 +76,7 @@
                         <h3>Web at Perkies LLC</h3>
                         <p>2021</p>
                     </div>
-                    <a href="#" class="visit-link">Visit Link ↗</a>
+                    <a href="https://perkies.com/" class="visit-link">Visit Link ↗</a>
                 </div>
                 <div class="experience-details">
                     <p>Spearheaded the design and development of Perkies' Shopify website, crafting an engaging and visually aligned user interface that reflects the brand's values</p>
@@ -93,7 +93,7 @@
                     <h3>Creativepool Annual 2024</h3>
                     <p>Shortlist</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://creativepool.com/meng-lan/projects/way-to-drive-navigating-foreign-roads-safely" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -101,7 +101,7 @@
                     <h3>Indigo Awards 2024</h3>
                     <p>Silver</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://www.indigoaward.com/winners/8560" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -109,7 +109,7 @@
                     <h3>NYX Awards 2024</h3>
                     <p>Gold</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://nyxawards.com/winner-info.php?id=6600" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -117,7 +117,7 @@
                     <h3>London Design Awards 2023</h3>
                     <p>Gold</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://thelondondesignawards.com/cn/winner-info.php?id=1024" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -125,7 +125,7 @@
                     <h3>GDUSA Graphic Design Awards 2023</h3>
                     <p>Poster Awards</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://gdusa.com/2023-graphic-design-awards-winner?rns=0|44414157" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -141,7 +141,7 @@
                     <h3>VEGA Digital Awards 2023</h3>
                     <p>Silver</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://vegaawards.com/winner-info.php?id=46468" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -149,7 +149,7 @@
                     <h3>Muse Creative Awards 2023</h3>
                     <p>Silver</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://museaward.com/winner-info.php?id=227750" class="visit-link">Visit Link ↗</a>
             </div>
         </div>
     </main>
