--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meng - UI/UX Designer</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Add this line -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
-<body>
+<body class="preload">
     <header>
         <nav>
             <div class="logo">
@@ -14,7 +17,18 @@
                     <img src="assets/img/logo.svg" alt="Logo">
                 </a>
             </div>
-            <div class="nav-links">
+            <!-- Desktop Navigation -->
+            <div class="desktop-nav">
+                <a href="index.html">Projects</a>
+                <a href="about.html">About</a>
+                <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
+                <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
+            </div>
+            <!-- Mobile Navigation -->
+            <button class="menu-toggle">
+                <span class="material-icons">menu</span>
+            </button>
+            <div class="mobile-nav">
                 <a href="index.html">Projects</a>
                 <a href="about.html">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
@@ -78,6 +92,8 @@
             </nav>
         </div>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
