--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- Add this line -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/grid.css">
 
 </head>
 <body class="preload">
@@ -42,24 +43,24 @@
         <p>With a keen eye for aesthetics and a passion for crafting user-centric experiences, I specialize in transforming ideas into intuitive and impactful digital designs.</p>
 
         <div class="project-grid">
-            <a href="yms.html" class="project-card">
+            <a href="#" class="project-card">
                 <img src="assets/img/cover-yms.png" alt="Yard Management System">
-                <h3>Yard Management System</h3>
+                <h3>Yard Management System - Coming Soon</h3>
                 <p>Web Design, SaaS</p>
             </a>
-            <a href="waytodrive.html" class="project-card">
+            <a href="#" class="project-card">
                 <img src="assets/img/cover-waytodrive.png" alt="Way to drive">
-                <h3>Way to drive</h3>
+                <h3>Way to drive - Coming Soon</h3>
                 <p>App, Interaction Design</p>
             </a>
-            <a href="unis-shipping.html" class="project-card">
+            <a href="serviceapp.html" class="project-card">
                 <img src="assets/img/cover-serviceapp.png" alt="UNIS Shipping App">
-                <h3>UNIS Shipping App</h3>
+                <h3>Service App</h3>
                 <p>App Design</p>
             </a>
-            <a href="vendor-portal.html" class="project-card">
+            <a href="#" class="project-card">
                 <img src="assets/img/cover-vendorportal.png" alt="Vendor Portal">
-                <h3>Vendor Portal - Invoice Generation</h3>
+                <h3>Vendor Portal - Invoice Generation - Coming Soon</h3>
                 <p>Responsive Web Design</p>
             </a>
             <a href="mystorybook.html" class="project-card">
