--- a/pickymon.html
+++ b/pickymon.html
@@ -6,6 +6,7 @@
     <title>Pickymon - Project Details</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/grid.css">
 </head>
 <body class="preload">
     <header>
@@ -94,30 +95,51 @@
             <div class="section">
                 <h2>Poster</h2>
                 <div class="image-grid">
-                    <img src="assets/img/pickymon/pickymon-poster-1.png" alt="Pickymon poster display">
-                    <img src="assets/img/pickymon/pickymon-poster-2.png" alt="Pickymon posters on wall">
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-poster-1.png" alt="Pickymon poster display">
+                    </div>
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-poster-2.png" alt="Pickymon posters on wall">
+                    </div>
                 </div>
             </div>
 
             <div class="section">
                 <h2>Game Cards</h2>
                 <div class="image-grid">
-                    <img src="assets/img/pickymon/pickymon-gamecard-1.png" alt="Pickymon game cards layout">
-                    <img src="assets/img/pickymon/pickymon-gamecard-2.png" alt="Pickymon card deck mockup">
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-gamecard-1.png" alt="Pickymon game cards layout">
+                    </div>
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-gamecard-2.png" alt="Pickymon card deck mockup">
+                    </div>
                 </div>
             </div>
 
             <div class="section">
                 <h2>App Design</h2>
                 <div class="image-grid">
-                    <img src="assets/img/pickymon/pickymon-app-1.png" alt="Pickymon app interface">
-                    <img src="assets/img/pickymon/pickymon-app-2.png" alt="Pickymon app screens">
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-app-1.png" alt="Pickymon app interface">
+                    </div>
+                    <div class="image-item">
+                        <img src="assets/img/pickymon/pickymon-app-2.png" alt="Pickymon app screens">
+                    </div>
                 </div>
             </div>
 
-            <div class="web-section">
-                <h2>Web Future</h2>
-                <img src="assets/img/pickymon/pickymon-web.png" alt="Pickymon website on laptop">
+            <div class="section">
+                <h2>Web - Forum</h2>
+                <div class="web-image">
+                    <img src="assets/img/pickymon/pickymon-web.png" alt="Pickymon website on laptop">
+                </div>
+            </div>
+
+            <div class="section">
+                <h2>Results & Impact</h2>
+                <div class="results-content">
+                    <p>Through the Pickymon design, children who were previously hesitant to try new foods became more open to experimenting with different meals. Feedback from parents highlighted an increased willingness in their children to include a wider range of foods in their diets. The playful and educational approach has shown promising results in fostering healthier eating habits among young picky eaters.</p>
+                </div>
             </div>
         </div>
 
@@ -155,9 +177,9 @@
             <nav>
                 <a href="index.html">Projects</a>
                 <a href="about.html">About</a>
-                <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
-                <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
-                <a href="https://dribbble.com/mlan14" target="_blank">Dribbble</a>
+                <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank" rel="noopener">Resume</a>
+                <a href="https://www.linkedin.com/in/mlan14/" target="_blank" rel="noopener">LinkedIn</a>
+                <a href="https://dribbble.com/mlan14" target="_blank" rel="noopener">Dribbble</a>
             </nav>
         </div>
     </footer>
