--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About - Meng Lan</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/grid.css">
 </head>
 <body class="preload">
     <header>
@@ -59,7 +60,7 @@
                         <h3>UIUX Designer at UNIS LLC</h3>
                         <p>2023 - 2024</p>
                     </div>
-                    <a href="https://www.unisco.com/" class="visit-link">Visit Link ↗</a>
+                    <a href="https://www.unisco.com/" class="visit-link" target="_blank">Visit Link ↗</a>
                 </div>
                 <div class="experience-details">
                     <p>Designed and delivered innovative user interface concepts, wireframes, and prototypes for web and mobile applications, ensuring alignment with user needs and business goals</p>
@@ -82,13 +83,13 @@
                     <p>Played a key role in defining product strategy and long-term business objectives, ensuring alignment between user needs and business goals throughout the project lifecycle</p>
                 </div>
             </div>
-            <div class="experience-row">
+            <div class="experience-row" style="border-bottom: none;">
                 <div class="experience-header">
                     <div class="experience-info">
                         <h3>Web at Perkies LLC</h3>
                         <p>2021</p>
                     </div>
-                    <a href="https://perkies.com/" class="visit-link">Visit Link ↗</a>
+                    <a href="https://perkies.com/" class="visit-link" target="_blank">Visit Link ↗</a>
                 </div>
                 <div class="experience-details">
                     <p>Spearheaded the design and development of Perkies' Shopify website, crafting an engaging and visually aligned user interface that reflects the brand's values</p>
@@ -105,7 +106,7 @@
                     <h3>Creativepool Annual 2024</h3>
                     <p>Shortlist</p>
                 </div>
-                <a href="https://creativepool.com/meng-lan/projects/way-to-drive-navigating-foreign-roads-safely" class="visit-link">Visit Link ↗</a>
+                <a href="https://creativepool.com/meng-lan/projects/way-to-drive-navigating-foreign-roads-safely" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -113,7 +114,7 @@
                     <h3>Indigo Awards 2024</h3>
                     <p>Silver</p>
                 </div>
-                <a href="https://www.indigoaward.com/winners/8560" class="visit-link">Visit Link ↗</a>
+                <a href="https://www.indigoaward.com/winners/8560" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -121,7 +122,7 @@
                     <h3>NYX Awards 2024</h3>
                     <p>Gold</p>
                 </div>
-                <a href="https://nyxawards.com/winner-info.php?id=6600" class="visit-link">Visit Link ↗</a>
+                <a href="https://nyxawards.com/winner-info.php?id=6600" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -129,7 +130,7 @@
                     <h3>London Design Awards 2023</h3>
                     <p>Gold</p>
                 </div>
-                <a href="https://thelondondesignawards.com/cn/winner-info.php?id=1024" class="visit-link">Visit Link ↗</a>
+                <a href="https://thelondondesignawards.com/cn/winner-info.php?id=1024" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -137,7 +138,7 @@
                     <h3>GDUSA Graphic Design Awards 2023</h3>
                     <p>Poster Awards</p>
                 </div>
-                <a href="https://gdusa.com/2023-graphic-design-awards-winner?rns=0|44414157" class="visit-link">Visit Link ↗</a>
+                <a href="https://gdusa.com/2023-graphic-design-awards-winner?rns=0|44414157" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -145,7 +146,7 @@
                     <h3>Graphis Poster design 2023</h3>
                     <p>Silver</p>
                 </div>
-                <a href="#" class="visit-link">Visit Link ↗</a>
+                <a href="https://graphis.com/entry/2569e693-7142-4971-8a67-78c58a72a525" class="visit-link">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -153,7 +154,7 @@
                     <h3>VEGA Digital Awards 2023</h3>
                     <p>Silver</p>
                 </div>
-                <a href="https://vegaawards.com/winner-info.php?id=46468" class="visit-link">Visit Link ↗</a>
+                <a href="https://vegaawards.com/winner-info.php?id=46468" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
 
             <div class="award-row">
@@ -161,7 +162,7 @@
                     <h3>Muse Creative Awards 2023</h3>
                     <p>Silver</p>
                 </div>
-                <a href="https://museaward.com/winner-info.php?id=227750" class="visit-link">Visit Link ↗</a>
+                <a href="https://museaward.com/winner-info.php?id=227750" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
         </div>
     </main>
