--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <p>With a keen eye for aesthetics and a passion for crafting user-centric experiences, I specialize in transforming ideas into intuitive and impactful digital designs.</p>
 
         <div class="project-grid">
-            <a href="#" class="project-card">
+            <a href="yms.html" class="project-card">
                 <img src="assets/img/cover-yms.png" alt="Yard Management System">
-                <h3>Yard Management System - Coming Soon</h3>
+                <h3>Yard Management System</h3>
                 <p>Web Design, SaaS</p>
             </a>
             <a href="#" class="project-card">
@@ -54,14 +54,19 @@
                 <p>App, Interaction Design</p>
             </a>
             <a href="serviceapp.html" class="project-card">
-                <img src="assets/img/cover-serviceapp.png" alt="UNIS Shipping App">
+                <img src="assets/img/cover-serviceapp.png" alt="Service App">
                 <h3>Service App</h3>
                 <p>App Design</p>
             </a>
-            <a href="#" class="project-card">
+            <!-- <a href="#" class="project-card">
                 <img src="assets/img/cover-vendorportal.png" alt="Vendor Portal">
                 <h3>Vendor Portal - Invoice Generation - Coming Soon</h3>
                 <p>Responsive Web Design</p>
+            </a> -->
+            <a href="#" class="project-card">
+                <img src="assets/img/cover-cubeworkapp.png" alt="Cubework App">
+                <h3>Cubework App - Coming Soon</h3>
+                <p>App Design, Front-End Development</p>
             </a>
             <a href="mystorybook.html" class="project-card">
                 <img src="assets/img/cover-mystorybook.png" alt="My Story Book">
