--- a/serviceapp.html
+++ b/serviceapp.html
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <section class="launching">
+        <!-- <section class="launching">
             <h2>Launching the Project</h2>
             <h3>Building a product from the ground up to revolutionize driver efficiency</h3>
             
@@ -166,7 +166,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="key-features">
             <h2>Key Features</h2>
