--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h3>Yard Management System</h3>
                 <p>Web Design, SaaS</p>
             </a>
-            <a href="#" class="project-card">
+            <a href="waytodrive.html" class="project-card">
                 <img src="assets/img/cover-waytodrive.png" alt="Way to drive">
                 <h3>Way to drive - Coming Soon</h3>
                 <p>App Design, AR</p>
