--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </a>
             <a href="waytodrive.html" class="project-card">
                 <img src="assets/img/cover-waytodrive.png" alt="Way to drive">
-                <h3>Way to drive - Coming Soon</h3>
+                <h3>Way to drive - Award Winning</h3>
                 <p>App Design, AR</p>
             </a>
             <a href="serviceapp.html" class="project-card">
@@ -112,7 +112,7 @@
             </a> -->
             <a href="mystorybook.html" class="project-card">
                 <img src="assets/img/cover-mystorybook.png" alt="My Story Book">
-                <h3>My Story Book</h3>
+                <h3>My Story Book - Award Winning</h3>
                 <p>App Design, game design</p>
             </a>
             <a href="pickymon.html" class="project-card">
