--- a/about.html
+++ b/about.html
@@ -52,52 +52,125 @@
             <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank" class="download-resume">Download Resume ↗</a>
         </div>
 
+        <h2>Skills</h2>
+        <div class="skills-section">
+            <div class="skills-grid">
+                <div class="skill-tag">Storytelling</div>
+                <div class="skill-tag">User Strategy</div>
+                <div class="skill-tag">Generative AI</div>
+                <div class="skill-tag">Visual Design</div>
+                <div class="skill-tag">User Testing</div>
+                <div class="skill-tag">Research</div>
+                <div class="skill-tag">Coding Proficiency</div>
+            </div>
+        </div>
+
+        <h2>Tools</h2>
+        <div class="tools-section">
+            <div class="tools-grid">
+                <div class="tool-tag">
+                    <img src="assets/img/icons/figma.svg" alt="Figma">
+                    Figma
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/xd.svg" alt="Adobe XD">
+                    Adobe XD
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/ai.svg" alt="Adobe Illustrator">
+                    Adobe Illustrator
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/ps.svg" alt="Adobe Photoshop">
+                    Adobe Photoshop
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/indesign.svg" alt="Adobe Indesign">
+                    Adobe Indesign
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/ae.svg" alt="After Effect">
+                    After Effect
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/html.svg" alt="HTML">
+                    Html
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/css.svg" alt="CSS">
+                    CSS
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/xcode.svg" alt="Xcode">
+                    Xcode
+                </div>
+                <div class="tool-tag">
+                    <img src="assets/img/icons/flutter.svg" alt="Flutter">
+                    Flutter
+                </div>
+            </div>
+        </div>
+
+
         <h2>Work Experience</h2>
         <div class="experience-list">
             <div class="experience-row">
                 <div class="experience-header">
                     <div class="experience-info">
                         <h3>UIUX Designer at UNIS LLC</h3>
-                        <p>2023 - 2024</p>
+                        <p>2023 - 2024 | B2B & SaaS</p>
                     </div>
                     <a href="https://www.unisco.com/" class="visit-link" target="_blank">Visit Link ↗</a>
                 </div>
-                <div class="experience-details">
+                <!-- <div class="experience-details">
                     <p>Designed and delivered innovative user interface concepts, wireframes, and prototypes for web and mobile applications, ensuring alignment with user needs and business goals</p>
                     <p>Created and maintained a comprehensive design system, ensuring consistency in visual elements, typography, colors, and interaction patterns across different products</p>
                     <p>Developed front-end code to build a functional app prototype for developers, increasing efficiency by 40%</p>
                     <p>Collaborated closely with the product manager and took initiative in project planning, working directly with the business analyst to define and iterate on project structure</p>
-                </div>
+                </div> -->
             </div>
             <div class="experience-row">
                 <div class="experience-header">
                     <div class="experience-info">
                         <h3>Product Designer at ContentFi</h3>
-                        <p>2022</p>
+                        <p>2022 | Web3 | Startup</p>
                     </div>
                     <!-- <a href="#" class="visit-link">Visit Link ↗</a> -->
                 </div>
-                <div class="experience-details">
+                <!-- <div class="experience-details">
                     <p>Led the end-to-end product design process for cbc.tools, transforming the product from MVP to a fully functional beta version with a user-centered approach</p>
                     <p>Integrated NFT use cases into the product's business model by conducting thorough user research, competitive analysis, and collaborating closely with PM, engineers, and marketing teams, achieving 95% stakeholder satisfaction</p>
                     <p>Played a key role in defining product strategy and long-term business objectives, ensuring alignment between user needs and business goals throughout the project lifecycle</p>
-                </div>
+                </div> -->
             </div>
-            <div class="experience-row" style="border-bottom: none;">
+            <div class="experience-row" >
                 <div class="experience-header">
                     <div class="experience-info">
-                        <h3>Web at Perkies LLC</h3>
-                        <p>2021</p>
+                        <h3>Visual Designer at CCYP</h3>
+                        <p>2022 | Advertising Agency</p>
+                    </div>
+                    <!-- <a href="https://perkies.com/" class="visit-link" target="_blank">Visit Link ↗</a> -->
+                </div>
+            </div>
+            <div class="experience-row">
+                <div class="experience-header">
+                    <div class="experience-info">
+                        <h3>Web Designer at Perkies LLC</h3>
+                        <p>2021 | Retail & eCommerce</p>
                     </div>
                     <a href="https://perkies.com/" class="visit-link" target="_blank">Visit Link ↗</a>
                 </div>
-                <div class="experience-details">
+                <!-- <div class="experience-details">
                     <p>Spearheaded the design and development of Perkies' Shopify website, crafting an engaging and visually aligned user interface that reflects the brand's values</p>
                     <p>Enhanced user experience and site performance by optimizing product images and refining backend code, ensuring a responsive and seamless browsing experience across devices</p>
                     <p>Organized and structured website content to streamline navigation, facilitating an intuitive user journey</p>
-                </div>
+                </div> -->
             </div>
         </div>
+        <br>
+        <br>
+
+        
 
         <h2>Awards</h2>
         <div class="awards">
@@ -165,6 +238,8 @@
                 <a href="https://museaward.com/winner-info.php?id=227750" class="visit-link" target="_blank">Visit Link ↗</a>
             </div>
         </div>
+
+       
     </main>
 
     <section class="contact">
@@ -187,4 +262,53 @@
 
     <script src="assets/js/main.js"></script>
 </body>
+<style>
+    /* Skills Section */
+.skills-section,
+.tools-section {
+    margin-bottom: 4rem;
+}
+
+.skills-grid,
+.tools-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.skill-tag,
+.tool-tag {
+    display: inline-flex;
+    align-items: center;
+    padding: 0.75rem 1.5rem;
+    background: white;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 100px;
+    font-size: 16px;
+    color: var(--primary-color);
+}
+
+.tool-tag {
+    gap: 0.5rem;
+}
+
+.tool-tag img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+}
+
+@media (max-width: 768px) {
+    .skills-grid,
+    .tools-grid {
+        gap: 0.75rem;
+    }
+
+    .skill-tag,
+    .tool-tag {
+        padding: 0.5rem 1rem;
+        font-size: 14px;
+    }
+}
+</style>
 </html>
